--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19",
+        "axios": "^0.19.2",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
         "jquery": "^3.2",
@@ -25,6 +25,10 @@
     },
     "dependencies": {
         "admin-lte": "^3.0.0-alpha.2",
-        "vue-router": "^3.1.6"
+        "moment": "^2.24.0",
+        "sweetalert2": "^7.0.0",
+        "vform": "^1.0.1",
+        "vue-router": "^3.1.6",
+        "vuex": "^3.1.3"
     }
 }
