--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.13.0",
         "admin-lte": "^3.0.0-alpha.2",
         "moment": "^2.24.0",
-        "sweetalert2": "^7.0.0",
+        "sweetalert2": "^7.29.2",
         "vform": "^1.0.1",
         "vue-router": "^3.1.6",
         "vuex": "^3.1.3"
